src/test/ui/macros/issue-78325-inconsistent-resolution.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/issue-78325-inconsistent-resolution.rs:3:9
   |
LL |         extern crate std as core;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_other_core!();
   | -------------------- in this macro invocation
   |
   = note: this error originates in the macro `define_other_core` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

